--- a/wp-content/themes/aurisdizajn/style.css
+++ b/wp-content/themes/aurisdizajn/style.css
@@ -119,7 +119,7 @@ figure  {
 .inner {
 	margin: 0 auto;
 	padding: 0 10px;
-	max-width: 980px;
+	max-width: 1440px;
 	overflow: hidden;
 }
 
@@ -127,8 +127,7 @@ figure  {
 .box-title {
 	font-weight: normal;
 	font-family: OldStandardTT-Regular;
-	font-size: 31px;
-	padding-left: 30px;
+	font-size: 26px;
 }
 
 .first-letter {
@@ -539,11 +538,14 @@ ol.bjqs-markers a:focus {
 .product-list .list .product-title {
 	font-size: 13px;
 	letter-spacing: -0.2px;
+	float: left;
 }
 
 .product-list .list .product-title a {
-	color: #693A50;
 	overflow-x: hidden;
+	font-family: HKGrotesk-Medium;
+	font-size: 18px;
+	color: #000;
 }
 
 .product-list .list .img-wrap {
@@ -561,15 +563,15 @@ ol.bjqs-markers a:focus {
 }
 
 .product-list .list .meta {
-	border-top: 1px solid #fff;
+	/*border-top: 1px solid #fff;
 	padding-top: 5px;
-	position: relative;
+	position: relative;*/
+	opacity: 0.4;
+	font-family: HKGrotesk-Regular;
 }
 
 .product-list .list .meta .price {
-	color: #693A50;
-	font-size: 12px;
-	margin-top: 5px;
+	font-size: 14px;
 }
 
 .product-list .list .meta .label {
@@ -1037,6 +1039,11 @@ ol.bjqs-markers a:focus {
 	.footer {
 		text-align: right;
 	}
+	.page-title,
+	.box-title {
+		padding-left: 30px;
+		font-size: 31px;
+	}
 }
 
 @media only screen and (min-width: 800px) {
@@ -1065,7 +1072,7 @@ ol.bjqs-markers a:focus {
 
 	.product-list .list .meta {
 		height: 25px;
-		padding-top: 15px;
+		float: right;
 	}
 
 	.product-list .list .meta .price,
