--- a/wp-content/themes/aurisdizajn/style.css
+++ b/wp-content/themes/aurisdizajn/style.css
@@ -17,9 +17,9 @@ body {
 	color: #000;
 }
 
-p {
+/*p {
 	font-family: Georgia, "Times New Roman", Times, serif;
-}
+}*/
 
 ul,
 ol {
@@ -118,7 +118,7 @@ figure  {
 
 .inner {
 	margin: 0 auto;
-	padding: 0 10px;
+	padding: 0 100px;
 	max-width: 1440px;
 	overflow: hidden;
 }
@@ -212,7 +212,7 @@ figure  {
 }
 
 .carousel {
-	margin: 15px -10px 80px;
+	margin: 15px 80px;
 }
 
 .carousel img {
@@ -289,7 +289,6 @@ ol.bjqs-markers a:focus {
 
 .article-body p {
 	margin-top: 15px;
-	font-family: HKGrotesk-Regular;
 	font-size: 15px;
 	color: #000000;
 	line-height: 25px;
@@ -352,21 +351,14 @@ ol.bjqs-markers a:focus {
 }
 
 /* PRODUCT */
-.single-product .page-title {
-	text-transform: uppercase;
-}
-
 .product-body {
-	background-color: #DBD0D5;
-	-webkit-border-radius: 15px;
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-	color: #693A50;
-	font-size: 14px;
-	line-height: 22px;
+	font-size: 15px;
+	line-height: 25px;
 	margin: 20px -10px 0 -10px;
 	padding: 10px;
 	zoom: 1; /* IE7 fix */
+	max-width: 700px;
+	margin: 0 auto;
 }
 
 .product-body h3 {
@@ -376,24 +368,39 @@ ol.bjqs-markers a:focus {
 }
 
 .product-body p {
-	margin-top: 15px;
-	font-size: 14px;
-}
-
-.product-body p:first-child {
-	margin-top: 15px;
-}
-
-.single-product .meta {
-	border-top: 1px solid #fff;
+	font-size: 15px;
+	line-height: 25px;
 	margin-top: 10px;
-	padding-top: 10px;
+	clear: both;
 }
 
-.single-product .meta .price {
+.single-product {
+	margin-bottom: 30px;
+}
+
+.single-product .page-title {
+	float: left;
+	margin-left: -70px;
+	padding-left: 0;
+}
+
+.single-product .product-body .price-inner {
+/*	border-top: 1px solid #fff;
+*/	/*margin-top: 10px;
+	padding-top: 10px;*/
+	float: right;
+	background: url(images/price-box.png) no-repeat;
+    width: 176px;
+    height: 60px;
+    margin-top: 30px;
+}
+
+.single-product .product-body .meta .price {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
-	margin-top: 5px;
+	margin: 0 20px;
+	vertical-align: middle;
+    line-height: 60px;
 }
 
 .single-product .meta .label {
@@ -401,15 +408,23 @@ ol.bjqs-markers a:focus {
 }
 
 .single-product .meta .amount {
-	color: #693A50;
+	font-size: 14px;
 }
 
+.single-product .product-body .meta .amount {
+	font-size: 22px;
+}
+
+.single-product .meta .piece {
+	font-size: 14px;
+	opacity: 0.4;
+}
 .single-product .meta .button {
 	direction: none;
 }
 
 .related-products .box-title {
-	margin-top: 30px;
+	margin-top: 50px;
 }
 
 /* gallery */
@@ -518,6 +533,10 @@ ol.bjqs-markers a:focus {
 	margin: 20px -10px 0 -10px;
 }
 
+.single .product-list {
+	border-top: 2px solid #F9EAE5;
+}
+
 .product-list .list {
 	margin: -5px;
 }
@@ -543,7 +562,6 @@ ol.bjqs-markers a:focus {
 
 .product-list .list .product-title a {
 	overflow-x: hidden;
-	font-family: HKGrotesk-Medium;
 	font-size: 18px;
 	color: #000;
 }
@@ -567,7 +585,6 @@ ol.bjqs-markers a:focus {
 	padding-top: 5px;
 	position: relative;*/
 	opacity: 0.4;
-	font-family: HKGrotesk-Regular;
 }
 
 .product-list .list .meta .price {
@@ -914,6 +931,7 @@ ol.bjqs-markers a:focus {
 
 	.product-body .gallery {
 		margin: -5px;
+		clear: both;
 	}
 
 	.product-body .gallery .gallery-item {
@@ -1039,8 +1057,7 @@ ol.bjqs-markers a:focus {
 	.footer {
 		text-align: right;
 	}
-	.page-title,
-	.box-title {
+	.page-title {
 		padding-left: 30px;
 		font-size: 31px;
 	}
@@ -1066,8 +1083,8 @@ ol.bjqs-markers a:focus {
 @media only screen and (min-width: 1024px) {
 
 	.main-wrap {
-		margin-right: -235px;
-		padding-right: 235px;
+		margin-right: -435px;
+		padding-right: 435px;
 	}
 
 	.product-list .list .meta {
