--- a/wp-content/themes/aurisdizajn/style.css
+++ b/wp-content/themes/aurisdizajn/style.css
@@ -202,7 +202,8 @@ figure  {
 }
 
 .main-nav a:hover,
-.main-nav a:focus, .main-nav .current_page_item a {
+.main-nav a:focus,
+.main-nav .current_page_item a {
 	text-decoration: none;
 	color: #000;
 	border-bottom: solid 2px #EFCABE;
@@ -440,7 +441,6 @@ ol.bjqs-markers a:focus {
 }
 
 .single-product .product-body .meta .price {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 13px;
 	margin: 0 20px;
 	vertical-align: middle;
